adpated for ee194

--- a/0_intro_to_scala.ipynb
+++ b/0_intro_to_scala.ipynb
@@ -3,21 +3,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "<a name=\"top\"></a><img src=\"images/chisel_1024.png\" alt=\"Chisel logo\" style=\"width:480px;\" />"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Module 1: Introduction to Scala\n",
-    "**Next: [Your First Chisel Module](2.1_first_module.ipynb)**\n",
-    "\n",
-    "## Motivation\n",
-    "These tutorials use the *Jupyter* notebook environment so you can read code, make changes, and then run code snippets in place. We encourage you to experiment with tutorial code blocks to speed your way to Chisel mastery.\n",
-    "\n",
-    "In this first module, you will learn how to write basic Scala code and how to read more advanced Scala code."
+    "# Module 0: Introduction to Scala\n",
+    "Adapted for UC Berkeley ELENG 194/294 from Chisel Bootcamp by ELENG 194/294 staff"
    ]
   },
   {
@@ -25,16 +18,18 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Understanding Scala\n",
+    "# Chisel and Scala\n",
+    "\n",
+    "From Chisel Documentation:\n",
+    "\n",
+    "Chisel (Constructing Hardware In a Scala Embedded Language) is a hardware construction language embedded in the high-level programming language Scala. Chisel is a library of special class definitions, predefined objects, and usage conventions within Scala, so when you write Chisel you are actually writing a Scala program that constructs a hardware graph. As you gain experience and want to make your code simpler or more reusable, you will find it important to leverage the underlying power of the Scala language. We recommend you consult one of the excellent Scala books to become more expert in Scala programming.\n",
+    "\n",
     "Scala is yet another programming language which supports common programming paradigms. We chose to use it for several reasons:\n",
     "\n",
     "- It is a good language for hosting an embedded DSL.\n",
     "- It has a powerful and elegant library for manipulating various collections of data.\n",
     "- It has a rigorous type system that helps catch a large class of errors very early in the development cycle, i.e. at compilation.\n",
-    "- It has powerful ways of expressing and passing functions.\n",
-    "- Chi*p*el, Chi*j*el, and Chi*c*el don't roll off the tongue as nicely as Chisel does.\n",
-    "\n",
-    "All of these points will become apparent as we talk about Chisel later, but for now, we are going to focus on the basics of reading and writing Scala code."
+    "- It has powerful ways of expressing and passing functions."
    ]
   },
   {
@@ -43,16 +38,7 @@
    "source": [
     "---\n",
     "# Variables and Constants - var and val\n",
-    "Statements that create (mutable) variables and constant values (immutable variables) are preceded with the keywords *var* and *val* respectively.  It is common practice to use *val* whenever possible.  Why?  Mostly to reduce the chances of re-using variables in ways that are error prone or make your code difficult to read. The structure of Scala makes this practice easier than you might expect.\n",
-    "\n",
-    "<span style=\"color:blue\">**Example:**</span><br>\n",
-    "The subsequent code block is executable right here, within this notebook. To run it, focus on it by clicking it. When the cell is active, a box with a green bar on the left appears around it. Once selected, the active *code block* cell may be run using the **play** button found at the top of the notebook (highlighted in red below for reference). \n",
-    "\n",
-    "![](images/playbutton.png)\n",
-    "\n",
-    "Alternatively, you may use keyboard shortcuts. **Shift+enter** runs the currently active cell and moves the focus to the next cell. **Ctrl+enter** runs the current cell and keeps it in focus. \n",
-    "\n",
-    "Key examples begin with a blue and bold <span style=\"color:blue\">**Example**</span>, while exercises begin with a red <span style=\"color:red\">**Exercise**</span>. Module 1 consists entirely of short examples, so we've omitted the example declaration for the rest of this module."
+    "Statements that create (mutable) variables and constant values (immutable variables) are preceded with the keywords *var* and *val* respectively.  It is common practice to use *val* whenever possible.  Why?  Mostly to reduce the chances of re-using variables in ways that are error prone or make your code difficult to read. The structure of Scala makes this practice easier than you might expect."
    ]
   },
   {
@@ -371,17 +357,6 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Reading Scala\n",
-    "Being able to read Scala code and understand common naming conventions, design patterns, and best practices is an important step in becoming an effective Chisel designer. The potential for code reuse is one of the advantages of Chisel, but reuse is difficult if you can't read other people's code. Effectively parsing other people's code also makes it easier to seek out help, especially from resources like StackOverflow.\n",
-    "\n",
-    "The following sections show common code patterns you will see."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
     "# Packages and Imports \n",
     "\n",
     "```scala\n",
@@ -626,16 +601,6 @@
     "myMethod(wrap = false, count = 10)\n",
     "```\n",
     "will work as if 24 had been passed in."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# You're done!\n",
-    "\n",
-    "[Return to the top.](#top)"
    ]
   }
  ],
