--- a/1_intro_to_chisel.ipynb
+++ b/1_intro_to_chisel.ipynb
@@ -2,23 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a name=\"top\"></a><img src=\"images/chisel_1024.png\" alt=\"Chisel logo\" style=\"width:480px;\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "# Module 2.1: Your First Chisel Module\n",
-    "**Prev: [Introduction to Scala](1_intro_to_scala.ipynb)**<br>\n",
-    "**Next: [Combinational Logic](2.2_comb_logic.ipynb)**\n",
+    "# Module 1: Intro to Chisel\n",
     "\n",
-    "## Motivation\n",
-    "Now that you are familiar with Scala, let's start carving out some hardware! Chisel stands for **C**onstructing **H**ardware **I**n a **S**cala **E**mbedded **L**anguage. That means it is a DSL in Scala, allowing you to take advantage of both Scala and Chisel programming within the same code. It is important to understand which code is \"Scala\" and which code is \"Chisel\", but we will discuss that more later. For now, think of Chisel and the code in Module 2 as a better way to write Verilog. This module throws an entire Chisel `Module` and tester at you. Just get the gist of it for now. You'll see plenty more examples later."
+    "Adapted for UC Berkeley ELENG 194/294 from Chisel Bootcamp by ELENG 194/294 staff\n",
+    "\n",
+    "Now that you are familiar with Scala, let's start carving out some hardware! Chisel stands for **C**onstructing **H**ardware **I**n a **S**cala **E**mbedded **L**anguage. That means it is a DSL in Scala, allowing you to take advantage of both Scala and Chisel programming within the same code. It is important to understand which code is \"Scala\" and which code is \"Chisel\"."
    ]
   },
   {
@@ -31,9 +23,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-12T20:52:43.054691Z",
+     "start_time": "2024-01-12T20:52:34.266010Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compiling /Users/williamlyh/Desktop/Berkeley/Spring2024/ELENG194/bootcamp/tapeout-chisel-bootcamp/Main.sc"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Checking https://repo1.maven.org/maven2/edu/berkeley/cs/chisel3_2.12/maven-metadata.xml\n",
+      "Checked https://repo1.maven.org/maven2/edu/berkeley/cs/chisel3_2.12/maven-metadata.xml\n",
+      "Downloading https://repo1.maven.org/maven2/edu/berkeley/cs/chisel3_2.12/maven-metadata.xml\n",
+      "Downloaded https://repo1.maven.org/maven2/edu/berkeley/cs/chisel3_2.12/maven-metadata.xml\n",
+      "Checking https://repo1.maven.org/maven2/edu/berkeley/cs/chisel-iotesters_2.12/maven-metadata.xml\n",
+      "Checked https://repo1.maven.org/maven2/edu/berkeley/cs/chisel-iotesters_2.12/maven-metadata.xml\n",
+      "Checking https://repo1.maven.org/maven2/edu/berkeley/cs/chiseltest_2.12/maven-metadata.xml\n",
+      "Checked https://repo1.maven.org/maven2/edu/berkeley/cs/chiseltest_2.12/maven-metadata.xml\n",
+      "Downloading https://repo1.maven.org/maven2/edu/berkeley/cs/chiseltest_2.12/maven-metadata.xml\n",
+      "Downloaded https://repo1.maven.org/maven2/edu/berkeley/cs/chiseltest_2.12/maven-metadata.xml\n",
+      "Checking https://repo1.maven.org/maven2/edu/berkeley/cs/dsptools_2.12/maven-metadata.xml\n",
+      "Checked https://repo1.maven.org/maven2/edu/berkeley/cs/dsptools_2.12/maven-metadata.xml\n",
+      "Checking https://repo1.maven.org/maven2/edu/berkeley/cs/firrtl-diagrammer_2.12/maven-metadata.xml\n",
+      "Checked https://repo1.maven.org/maven2/edu/berkeley/cs/firrtl-diagrammer_2.12/maven-metadata.xml\n",
+      "Downloading https://repo1.maven.org/maven2/edu/berkeley/cs/firrtl-diagrammer_2.12/maven-metadata.xml\n",
+      "Downloaded https://repo1.maven.org/maven2/edu/berkeley/cs/firrtl-diagrammer_2.12/maven-metadata.xml\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compiling /Users/williamlyh/Desktop/Berkeley/Spring2024/ELENG194/bootcamp/tapeout-chisel-bootcamp/Main.sc #2"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "\u001B[36mpath\u001B[39m: \u001B[32mString\u001B[39m = \u001B[32m\"/Users/williamlyh/Desktop/Berkeley/Spring2024/ELENG194/bootcamp/tapeout-chisel-bootcamp/source/load-ivy.sc\"\u001B[39m"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val path = System.getProperty(\"user.dir\") + \"/source/load-ivy.sc\"\n",
     "interp.load.module(ammonite.ops.Path(java.nio.file.FileSystems.getDefault().getPath(path)))"
@@ -48,9 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-12T20:52:43.239928Z",
+     "start_time": "2024-01-12T20:52:43.057074Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\u001B[32mimport \u001B[39m\u001B[36mchisel3._\n\u001B[39m\n\u001B[32mimport \u001B[39m\u001B[36mchisel3.util._\n\u001B[39m\n\u001B[32mimport \u001B[39m\u001B[36mchisel3.tester._\n\u001B[39m\n\u001B[32mimport \u001B[39m\u001B[36mchisel3.tester.RawTester.test\n\u001B[39m\n\u001B[32mimport \u001B[39m\u001B[36mdotvisualizer._\n\u001B[39m"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import chisel3._\n",
     "import chisel3.util._\n",
@@ -305,62 +361,6 @@
    "source": [
     "// Viewing the firrtl for debugging\n",
     "println(getFirrtl(new Passthrough))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# You're done!\n",
-    "\n",
-    "[Return to the top.](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <span style=\"color:red\"> Appendix: A Note on \"printf\" Debugging</span>\n",
-    "[Debugging with print statements](https://stackoverflow.com/a/189570) is not always the best way to debug, but is often an easy first step to see what's going on when something doesn't work the way you expect.\n",
-    "Because Chisel generators are programs generating hardware, there are some extra subtleties about printing generator and circuit state.\n",
-    "It is important to remember when your print statement executes and what is being printed.\n",
-    "The three common scenarios where you might want to print have some important differences:\n",
-    "* Chisel generator prints during circuit generation\n",
-    "* Circuit prints during circuit simulation\n",
-    "* Tester prints during testing\n",
-    "\n",
-    "`println` is a built-in Scala function that prints to the console. It **cannot** be used to print during circuit simulation because the generated circuit is FIRRTL or Verilog- not Scala.\n",
-    "\n",
-    "The following code block shows different styles of printing."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PrintingModule extends Module {\n",
-    "    val io = IO(new Bundle {\n",
-    "        val in = Input(UInt(4.W))\n",
-    "        val out = Output(UInt(4.W))\n",
-    "    })\n",
-    "    io.out := io.in\n",
-    "\n",
-    "    printf(\"Print during simulation: Input is %d\\n\", io.in)\n",
-    "    // chisel printf has its own string interpolator too\n",
-    "    printf(p\"Print during simulation: IO is $io\\n\")\n",
-    "\n",
-    "    println(s\"Print during generation: Input is ${io.in}\")\n",
-    "}\n",
-    "\n",
-    "test(new PrintingModule ) { c =>\n",
-    "    c.io.in.poke(3.U)\n",
-    "    c.clock.step(5) // circuit will print\n",
-    "    \n",
-    "    println(s\"Print during testing: Input is ${c.io.in.peek()}\")\n",
-    "}"
    ]
   }
  ],
