--- a/4_sequential_logic.ipynb
+++ b/4_sequential_logic.ipynb
@@ -4,27 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"top\"></a><img src=\"images/chisel_1024.png\" alt=\"Chisel logo\" style=\"width:480px;\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Module 2.4: Sequential Logic\n",
-    "**Prev: [Control Flow](2.3_control_flow.ipynb)**<br>\n",
-    "**Next: [FIR Filter](2.5_exercise.ipynb)**\n",
+    "# Module 4: Sequential Logic\n",
     "\n",
-    "## Motivation\n",
-    "You can't write any meaningful digital logic without state. You can't write any meaningful digital logic without state. You can't write any meaningful digital logic....\n",
+    "Adapted for UC Berkeley ELENG 194/294 from Chisel Bootcamp by ELENG 194/294 staff\n",
     "\n",
-    "Get it? Because without storing intermediate results, you can't get anywhere.\n",
+    "This module will describe how to express common sequential patterns in Chisel. By the end of the module, you should be able to implement and test a shift register in Chisel.\n",
     "\n",
-    "Ok, that bad joke aside, this module will describe how to express common sequential patterns in Chisel. By the end of the module, you should be able to implement and test a shift register in Chisel.\n",
-    "\n",
-    "It's important to emphasize that this section will probably not dramatically impress you. Chisel's power is not in new sequential logic patterns, but in the parameterization of a design. Before we demonstrate that capability, we have to learn what these sequential patterns are. Thus, this section will show you that Chisel can do pretty much what Verilog can do - you just need to learn the Chisel syntax.\n",
-    "\n",
-    "## Setup"
+    "It's important to emphasize that this section will probably not dramatically impress you. Chisel's power is not in new sequential logic patterns, but in the parameterization of a design. Before we demonstrate that capability, we have to learn what these sequential patterns are. Thus, this section will show you that Chisel can do pretty much what Verilog can do - you just need to learn the Chisel syntax."
    ]
   },
   {
@@ -324,8 +310,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-12T21:03:29.364767Z",
+     "start_time": "2024-01-12T21:03:28.489220Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cmd0.sc:11: not found: value getVerilog\n",
+      "val res0_1 = println(getVerilog(new Comb))\n",
+      "                     ^cmd0.sc:1: illegal inheritance from final class Module\n",
+      "class Comb extends Module {\n",
+      "                   ^cmd0.sc:2: not found: value IO\n",
+      "  val io = IO(new Bundle {\n",
+      "           ^cmd0.sc:2: not found: type Bundle\n",
+      "  val io = IO(new Bundle {\n",
+      "                  ^cmd0.sc:3: not found: value SInt\n",
+      "    val in  = Input(SInt(12.W))\n",
+      "                    ^cmd0.sc:3: value W is not a member of Int\n",
+      "    val in  = Input(SInt(12.W))\n",
+      "                            ^cmd0.sc:4: not found: value Output\n",
+      "    val out = Output(SInt(12.W))\n",
+      "              ^cmd0.sc:4: not found: value SInt\n",
+      "    val out = Output(SInt(12.W))\n",
+      "                     ^cmd0.sc:4: value W is not a member of Int\n",
+      "    val out = Output(SInt(12.W))\n",
+      "                             ^cmd0.sc:7: not found: type SInt\n",
+      "  val delay: SInt = Reg(SInt(12.W))\n",
+      "             ^cmd0.sc:7: not found: value Reg\n",
+      "  val delay: SInt = Reg(SInt(12.W))\n",
+      "                    ^cmd0.sc:7: not found: value SInt\n",
+      "  val delay: SInt = Reg(SInt(12.W))\n",
+      "                        ^cmd0.sc:7: value W is not a member of Int\n",
+      "  val delay: SInt = Reg(SInt(12.W))\n",
+      "                                ^Compilation Failed"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Compilation Failed"
+     ]
+    }
+   ],
    "source": [
     "class Comb extends Module {\n",
     "  val io = IO(new Bundle {\n",
@@ -355,8 +388,6 @@
     "- **The output initializes at `b0001`.**\n",
     "- Shifts each clock cycle (no enable signal).\n",
     "- **Note in Chisel, subword assignment IS ILLEGAL**; something like `out(0) := in` will not work.\n",
-    "\n",
-    "<img src=\"images/shifter4.svg\" alt=\"shift register figure\" style=\"width: 450px\" />\n",
     "\n",
     "A basic Module skeleton, testvector, and Driver invocation is provided below. The first register has been provided for you."
    ]
@@ -408,168 +439,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\">**Exercise: Parameterized Shift Register (Optional)**</span><br>\n",
-    "Write a shift register that is parameterized by its delay (`n`), its initial value (`init`), and also has an enable input signal (`en`)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": [
-    "// n is the output width (number of delays - 1)\n",
-    "// init state to init\n",
-    "class MyOptionalShiftRegister(val n: Int, val init: BigInt = 1) extends Module {\n",
-    "  val io = IO(new Bundle {\n",
-    "    val en  = Input(Bool())\n",
-    "    val in  = Input(Bool())\n",
-    "    val out = Output(UInt(n.W))\n",
-    "  })\n",
-    "\n",
-    "  val state = RegInit(init.U(n.W))\n",
-    "\n",
-    "  ???\n",
-    "}\n",
-    "\n",
-    "// test different depths\n",
-    "for (i <- Seq(3, 4, 8, 24, 65)) {\n",
-    "  println(s\"Testing n=$i\")\n",
-    "  test(new MyOptionalShiftRegister(n = i)) { c =>\n",
-    "    val inSeq = Seq(0, 1, 1, 1, 0, 1, 1, 0, 0, 1)\n",
-    "    var state = c.init\n",
-    "    var i = 0\n",
-    "    c.io.en.poke(true.B)\n",
-    "    while (i < 10 * c.n) {\n",
-    "      // poke in repeated inSeq\n",
-    "      val toPoke = inSeq(i % inSeq.length)\n",
-    "      c.io.in.poke((toPoke != 0).B)\n",
-    "      // update expected state\n",
-    "      state = ((state * 2) + toPoke) & BigInt(\"1\"*c.n, 2)\n",
-    "      c.clock.step(1)\n",
-    "      c.io.out.expect(state.U)\n",
-    "\n",
-    "      i += 1\n",
-    "    }\n",
-    "  }\n",
-    "}\n",
-    "println(\"SUCCESS!!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-2\" />\n",
-    "<label for=\"check-2\"><strong>Solution</strong></label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
-    "  val nextState = (state << 1) | io.in\n",
-    "  when (io.en) {\n",
-    "    state  := nextState\n",
-    "  }\n",
-    "  io.out := state\n",
-    "</pre></article></div></section></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# Appendix: Explicit clock and reset\n",
-    "Chisel modules have a default clock and reset that are implicitly used by every register created inside them.\n",
-    "There are times where you want to be able to override this default behavior; perhaps you have a black box that generates a clock or reset signal, or you have a multi-clock design.\n",
-    "\n",
-    "Chisel provides constructs for dealing with these cases.\n",
-    "Clocks and resets can be overridden separately or together with `withClock() {}`, `withReset() {}`, and `withClockAndReset() {}`.\n",
-    "The following code blocks will give examples of using these functions.\n",
-    "\n",
-    "One thing to be aware of is that `reset` (as of this tutorial's writing) is always synchronous and of type `Bool`.\n",
-    "Clocks have their own type in Chisel (`Clock`) and should be declared as such.\n",
-    "*`Bool`s can be converted to `Clock`s by calling `asClock()` on them, but you should be careful that you aren't doing something silly.*\n",
-    "\n",
-    "Also note that `chisel-testers` do not currently have complete support for multi-clock designs.\n",
-    "\n",
-    "<span style=\"color:blue\">**Example: Multi-Clock Module**</span><br>\n",
-    "A module with multiple clocks and reset signals."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "source": [],
    "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "// we need to import multi-clock features\n",
-    "import chisel3.experimental.{withClock, withReset, withClockAndReset}\n",
-    "\n",
-    "class ClockExamples extends Module {\n",
-    "  val io = IO(new Bundle {\n",
-    "    val in = Input(UInt(10.W))\n",
-    "    val alternateReset    = Input(Bool())\n",
-    "    val alternateClock    = Input(Clock())\n",
-    "    val outImplicit       = Output(UInt())\n",
-    "    val outAlternateReset = Output(UInt())\n",
-    "    val outAlternateClock = Output(UInt())\n",
-    "    val outAlternateBoth  = Output(UInt())\n",
-    "  })\n",
-    "\n",
-    "  val imp = RegInit(0.U(10.W))\n",
-    "  imp := io.in\n",
-    "  io.outImplicit := imp\n",
-    "\n",
-    "  withReset(io.alternateReset) {\n",
-    "    // everything in this scope with have alternateReset as the reset\n",
-    "    val altRst = RegInit(0.U(10.W))\n",
-    "    altRst := io.in\n",
-    "    io.outAlternateReset := altRst\n",
-    "  }\n",
-    "\n",
-    "  withClock(io.alternateClock) {\n",
-    "    val altClk = RegInit(0.U(10.W))\n",
-    "    altClk := io.in\n",
-    "    io.outAlternateClock := altClk\n",
-    "  }\n",
-    "\n",
-    "  withClockAndReset(io.alternateClock, io.alternateReset) {\n",
-    "    val alt = RegInit(0.U(10.W))\n",
-    "    alt := io.in\n",
-    "    io.outAlternateBoth := alt\n",
-    "  }\n",
-    "}\n",
-    "\n",
-    "println(getVerilog(new ClockExamples))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# Wrap Up\n",
-    "Great job completing this section!! You've now learned how to create registers and write sequential logic in Chisel, which means you have enough basic building blocks to write real circuits.\n",
-    "\n",
-    "The next section will combine everything we've learned into one example! If you need a little more encouragement, just remember these words from an expert Chisel user:\n",
-    "\n",
-    "![BobRoss](http://i.qkme.me/3qbd5u.jpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# You're done!\n",
-    "\n",
-    "[Return to the top.](#top)"
-   ]
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
