--- a/2_comb_logic.ipynb
+++ b/2_comb_logic.ipynb
@@ -2,36 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a name=\"top\"></a><img src=\"images/chisel_1024.png\" alt=\"Chisel logo\" style=\"width:480px;\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "# Module 2.2: Combinational Logic\n",
-    "**Prev: [Your First Chisel Module](2.1_first_module.ipynb)**<br>\n",
-    "**Next: [Control Flow](2.3_control_flow.ipynb)**\n",
+    "# Module 2: Combinational Logic\n",
     "\n",
-    "## Motivation\n",
+    "Adapted for UC Berkeley ELENG 194/294 from Chisel Bootcamp by ELENG 194/294 staff\n",
+    "\n",
     "In this section you will see how to use Chisel components to implement combinational logic.\n",
     "We will demonstrate how three of the basic Chisel types: `UInt `- unsigned integer; `SInt` - signed integer, and `Bool` - true or false may be connected and operated upon.\n",
     "Notice how all Chisel variables are declared as Scala `val`s.\n",
     "Never use a Scala `var` for a hardware construct, since the construct itself may never change once defined; only its value may change when running the hardware.\n",
-    "Wires may be used for parameterized types.\n",
-    "\n",
-    "## Setup"
+    "Wires may be used for parameterized types.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-12T20:57:46.381080Z",
+     "start_time": "2024-01-12T20:57:45.931866Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\u001B[36mpath\u001B[39m: \u001B[32mString\u001B[39m = \u001B[32m\"/Users/williamlyh/Desktop/Berkeley/Spring2024/ELENG194/bootcamp/tapeout-chisel-bootcamp/source/load-ivy.sc\"\u001B[39m"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val path = System.getProperty(\"user.dir\") + \"/source/load-ivy.sc\"\n",
     "interp.load.module(ammonite.ops.Path(java.nio.file.FileSystems.getDefault().getPath(path)))"
@@ -39,9 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-12T20:57:49.167135Z",
+     "start_time": "2024-01-12T20:57:48.901058Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\u001B[32mimport \u001B[39m\u001B[36mchisel3._\n\u001B[39m\n\u001B[32mimport \u001B[39m\u001B[36mchisel3.util._\n\u001B[39m\n\u001B[32mimport \u001B[39m\u001B[36mchisel3.tester._\n\u001B[39m\n\u001B[32mimport \u001B[39m\u001B[36mchisel3.tester.RawTester.test\n\u001B[39m"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import chisel3._\n",
     "import chisel3.util._\n",
@@ -51,18 +69,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "---\n",
     "# Common Operators\n",
     "Now that you understand how `Module`s are constructed, let's make some hardware! Take a look at the empty module below."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-12T20:58:01.410926Z",
+     "start_time": "2024-01-12T20:58:01.172304Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "defined \u001B[32mclass\u001B[39m \u001B[36mMyModule\u001B[39m"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class MyModule extends Module {\n",
     "  val io = IO(new Bundle {\n",
@@ -84,9 +118,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elaborating design...\n",
+      "2\n",
+      "UInt<1>(OpResult in MyModule)\n",
+      "Done elaborating.\n",
+      "module MyModule(\n",
+      "  input        clock,\n",
+      "  input        reset,\n",
+      "  input  [3:0] io_in,\n",
+      "  output [3:0] io_out\n",
+      ");\n",
+      "  assign io_out = io_in; // @[cmd4.sc 12:10]\n",
+      "endmodule\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "defined \u001B[32mclass\u001B[39m \u001B[36mMyModule\u001B[39m"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class MyModule extends Module {\n",
     "  val io = IO(new Bundle {\n",
@@ -102,7 +162,14 @@
     "  io.out := io.in\n",
     "}\n",
     "println(getVerilog(new MyModule))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-12T20:59:00.006080Z",
+     "start_time": "2024-01-12T20:58:58.765169Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -304,185 +371,6 @@
     "  io.out := (io.in_a * io.in_b) + io.in_c\n",
     "}\n",
     "</pre></article></div></section></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "<span style=\"color:red\">**Exercise: Arbiter**</span><br>\n",
-    "The following circuit arbitrates data coming from a FIFO into two parallel processing units. The FIFO and processing elements (PEs) communicate with ready-valid interfaces. Construct the arbiter to send data to whichever PE is ready to receive data, prioritizing PE0 if both are ready to receive data. Remember that the arbiter should tell the FIFO that it's ready to receive data when at least one of the PEs can receive data. Also, wait for a PE to assert that it's ready before asserting that the data are valid. You will likely need binary operators to complete this exercise.\n",
-    "\n",
-    "<img src=\"images/arbiter.png\" width=\"687\" height=\"177\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Arbiter extends Module {\n",
-    "  val io = IO(new Bundle {\n",
-    "    // FIFO\n",
-    "    val fifo_valid = Input(Bool())\n",
-    "    val fifo_ready = Output(Bool())\n",
-    "    val fifo_data  = Input(UInt(16.W))\n",
-    "    \n",
-    "    // PE0\n",
-    "    val pe0_valid  = Output(Bool())\n",
-    "    val pe0_ready  = Input(Bool())\n",
-    "    val pe0_data   = Output(UInt(16.W))\n",
-    "    \n",
-    "    // PE1\n",
-    "    val pe1_valid  = Output(Bool())\n",
-    "    val pe1_ready  = Input(Bool())\n",
-    "    val pe1_data   = Output(UInt(16.W))\n",
-    "  })\n",
-    "\n",
-    "  ???\n",
-    "}\n",
-    "\n",
-    "test(new Arbiter) { c =>\n",
-    "  import scala.util.Random\n",
-    "  val data = Random.nextInt(65536)\n",
-    "  c.io.fifo_data.poke(data.U)\n",
-    "  \n",
-    "  for (i <- 0 until 8) {\n",
-    "    c.io.fifo_valid.poke((((i >> 0) % 2) != 0).B)\n",
-    "    c.io.pe0_ready.poke((((i >> 1) % 2) != 0).B)\n",
-    "    c.io.pe1_ready.poke((((i >> 2) % 2) != 0).B)\n",
-    "\n",
-    "    c.io.fifo_ready.expect((i > 1).B)\n",
-    "    c.io.pe0_valid.expect((i == 3 || i == 7).B)\n",
-    "    c.io.pe1_valid.expect((i == 5).B)\n",
-    "    \n",
-    "    if (i == 3 || i ==7) {\n",
-    "      c.io.pe0_data.expect((data).U)\n",
-    "    } else if (i == 5) {\n",
-    "      c.io.pe1_data.expect((data).U)\n",
-    "    }\n",
-    "  }\n",
-    "}\n",
-    "println(\"SUCCESS!!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-2\" />\n",
-    "<label for=\"check-2\"><strong>Solution</strong></label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
-    "  io.fifo_ready := io.pe0_ready || io.pe1_ready\n",
-    "  io.pe0_valid := io.fifo_valid && io.pe0_ready\n",
-    "  io.pe1_valid := io.fifo_valid && io.pe1_ready && !io.pe0_ready\n",
-    "  io.pe0_data := io.fifo_data\n",
-    "  io.pe1_data := io.fifo_data\n",
-    "</pre></article></div></section></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\">**Exercise: Parameterized Adder (Optional)**</span><br>\n",
-    "This optional exercise exposes you to one of the most powerful features of Chisel, it's parameterization capabilities. To demonstrate this, we'll construct a parameterized adder that can either saturate the output when overflow occurs, or truncate the results (i.e. wrap around).\n",
-    "\n",
-    "First, look at the `Module` below. The parameter we pass into it is called `saturate` and has type *Scala* `Boolean`. This is not a Chisel `Bool`. So, we're not creating a single hardware adder that can either saturate or truncate, but rather we're creating a *generator* that produces either a saturating hardware adder *or* a truncating hardware adder. The decision is made at compile time.\n",
-    "\n",
-    "Next, notice the inputs and outputs are all 4-bit `UInt`s. Chisel has built-in width inferencing, and if you look at the [cheatsheet](https://github.com/freechipsproject/chisel-cheatsheet/releases/latest/download/chisel_cheatsheet.pdf), you'll see that the bitwidth of a normal summation is equal to the maximum bitwidth of the two inputs. This means that\n",
-    "\n",
-    "```scala\n",
-    "val sum = io.in_a + io.in_b\n",
-    "```\n",
-    "\n",
-    "will make `sum` a 4-bit wire, and the value will be the truncated result for 4-bit inputs. To check if the summation should saturate, you need to place the result in a 5-bit wire. This can be done with the `+&` summation, as seen on the cheatsheet.\n",
-    "\n",
-    "```scala\n",
-    "val sum = io.in_a +& io.in_b\n",
-    "```\n",
-    "\n",
-    "Finally, note that connecting a 4-bit `UInt` wire to a 5-bit `UInt` wire will truncate the MSB by default. You can use this to easily truncate the 5-bit sum for the non-saturating adder."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ParameterizedAdder(saturate: Boolean) extends Module {\n",
-    "  val io = IO(new Bundle {\n",
-    "    val in_a = Input(UInt(4.W))\n",
-    "    val in_b = Input(UInt(4.W))\n",
-    "    val out  = Output(UInt(4.W))\n",
-    "  })\n",
-    "\n",
-    "  ???\n",
-    "}\n",
-    "\n",
-    "for (saturate <- Seq(true, false)) {\n",
-    "  test(new ParameterizedAdder(saturate)) { c =>\n",
-    "    // 100 random tests\n",
-    "    val cycles = 100\n",
-    "    import scala.util.Random\n",
-    "    import scala.math.min\n",
-    "    for (i <- 0 until cycles) {\n",
-    "      val in_a = Random.nextInt(16)\n",
-    "      val in_b = Random.nextInt(16)\n",
-    "      c.io.in_a.poke(in_a.U)\n",
-    "      c.io.in_b.poke(in_b.U)\n",
-    "      if (saturate) {\n",
-    "        c.io.out.expect(min(in_a + in_b, 15).U)\n",
-    "      } else {\n",
-    "        c.io.out.expect(((in_a + in_b) % 16).U)\n",
-    "      }\n",
-    "    }\n",
-    "    \n",
-    "    // ensure we test saturation vs. truncation\n",
-    "    c.io.in_a.poke(15.U)\n",
-    "    c.io.in_b.poke(15.U)\n",
-    "    if (saturate) {\n",
-    "      c.io.out.expect(15.U)\n",
-    "    } else {\n",
-    "      c.io.out.expect(14.U)\n",
-    "    }\n",
-    "  }\n",
-    "}\n",
-    "println(\"SUCCESS!!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-3\" />\n",
-    "<label for=\"check-3\"><strong>Solution</strong></label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
-    "  val sum = io.in_a +& io.in_b\n",
-    "  if (saturate) {\n",
-    "    io.out := Mux(sum > 15.U, 15.U, sum)\n",
-    "  } else {\n",
-    "    io.out := sum\n",
-    "  }\n",
-    "</pre></article></div></section></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# You're done!\n",
-    "\n",
-    "[Return to the top.](#top)"
    ]
   }
  ],
