--- a/3_control_flow.ipynb
+++ b/3_control_flow.ipynb
@@ -2,30 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a name=\"top\"></a><img src=\"images/chisel_1024.png\" alt=\"Chisel logo\" style=\"width:480px;\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "# Module 2.3: Control Flow\n",
-    "**Prev: [Combinational Logic](2.2_comb_logic.ipynb)**<br>\n",
-    "**Next: [Sequential Logic](2.4_sequential_logic.ipynb)**\n",
+    "# Module 3: Control Flow\n",
     "\n",
-    "## Motivation\n",
+    "Adapted for UC Berkeley ELENG 194/294 from Chisel Bootcamp by ELENG 194/294 staff\n",
+    "\n",
     "Up until now there has been a strong correspondence between software and hardware in Chisel.\n",
     "In control flow there will be a greater divergence between the way we think about the two.\n",
-    "This module introduces control flow both in the generator software and in the hardware.\n",
-    "What happens if you reconnect to a Chisel wire?\n",
-    "How can you make a mux with more than two inputs?\n",
-    "The answers to these questions and more can be yours by completing this module.\n",
-    "\n",
-    "## Setup"
+    "This module introduces control flow both in the generator software and in the hardware."
    ]
   },
   {
@@ -48,41 +35,6 @@
     "import chisel3.util._\n",
     "import chisel3.tester._\n",
     "import chisel3.tester.RawTester.test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# Last Connect Semantics\n",
-    "\n",
-    "<span style=\"color:blue\">**Example: Reassignment**</span><br>\n",
-    "As seen earlier, Chisel allows you to connect components using the `:=` operator.\n",
-    "For various reasons it is possible to issue multiple connect statements to the same component.\n",
-    "When this happens, the last statement wins."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class LastConnect extends Module {\n",
-    "  val io = IO(new Bundle {\n",
-    "    val in = Input(UInt(4.W))\n",
-    "    val out = Output(UInt(4.W))\n",
-    "  })\n",
-    "  io.out := 1.U\n",
-    "  io.out := 2.U\n",
-    "  io.out := 3.U\n",
-    "  io.out := 4.U\n",
-    "}\n",
-    "\n",
-    "//  Test LastConnect\n",
-    "test(new LastConnect) { c => c.io.out.expect(4.U) } // Assert that the output correctly has 4\n",
-    "println(\"SUCCESS!!\") // Scala Code: if we get here, our tests passed!"
    ]
   },
   {
@@ -487,152 +439,6 @@
     "    result := (4.S * square) - (10.S * io.x) - 5.S\n",
     "  }\n",
     "</pre></article></div></section></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\">**Exercise: Finite State Machine**</span><br>\n",
-    "Using Karnaugh maps to optimize the logic for state machines is tedious and solved by synthesis tools. It also produces unintuitive and unreadable code. So we'll write a more sensible one using Chisel control flow and last connect semantics.\n",
-    "\n",
-    "Grad students pass through four states in their career: Idle, Coding, Writing, and Graduating. These states transition based off three inputs: Coffee, Ideas they come up with, and Pressure from their advisor to make progress. Once they Graduate, they return to the Idle state. The FSM diagram below shows these states and transitions. Any unlabelled transition (i.e. when there are no inputs) returns a grad student to the Idle state instead of staying in the current state. The input precedence is coffee > idea > pressure, so when in the Idle state and receiving both coffee and pressure, a graduate student will move to the Coding state.\n",
-    "\n",
-    "<img src=\"images/fsm.png\" width=\"500\" />\n",
-    "\n",
-    "First we'll construct a model to test against our hardware. Complete the following functional description of our state machine. It has four inputs. The output is the next state. The state map is provided for you. You can access it like `states(\"grad\")`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// state map\n",
-    "def states = Map(\"idle\" -> 0, \"coding\" -> 1, \"writing\" -> 2, \"grad\" -> 3)\n",
-    "\n",
-    "// life is full of question marks\n",
-    "def gradLife (state: Int, coffee: Boolean, idea: Boolean, pressure: Boolean): Int = {\n",
-    "  var nextState = states(\"idle\")\n",
-    "  ???\n",
-    "  nextState\n",
-    "}\n",
-    "\n",
-    "// some sanity checks\n",
-    "(0 until states.size).foreach{ state => assert(gradLife(state, false, false, false) == states(\"idle\")) }\n",
-    "assert(gradLife(states(\"writing\"), true, false, true) == states(\"writing\"))\n",
-    "assert(gradLife(states(\"idle\"), true, true, true) == states(\"coding\"))\n",
-    "assert(gradLife(states(\"idle\"), false, true, true) == states(\"idle\"))\n",
-    "assert(gradLife(states(\"grad\"), false, false, false) == states(\"idle\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-4\" />\n",
-    "<label for=\"check-4\"><strong>Solution</strong></label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
-    "  if (state == states(\"idle\")) {\n",
-    "    if      (coffee) { nextState = states(\"coding\") }\n",
-    "    else if (idea) { nextState = states(\"idle\") }\n",
-    "    else if (pressure) { nextState = states(\"writing\") }\n",
-    "  } else if (state == states(\"coding\")) {\n",
-    "    if      (coffee) { nextState = states(\"coding\") } \n",
-    "    else if (idea || pressure) { nextState = states(\"writing\") }\n",
-    "  } else if (state == states(\"writing\")) {\n",
-    "    if      (coffee || idea) { nextState = states(\"writing\") }\n",
-    "    else if (pressure) { nextState = states(\"grad\") }\n",
-    "  }\n",
-    "</pre></article></div></section></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since you haven't learned sequential logic yet, the current state is an input to the `Module`, and the next state is an output, as with the `gradLife` function earlier. Now implement the state machine in Chisel to pass the tester. Chisel provides a convenient state machine mapping function for us called `Enum`. To use these states, treat them like `UInt` literals. Remember that hardware equality is performed with the triple equals sign!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// life gets hard-er\n",
-    "class GradLife extends Module {\n",
-    "  val io = IO(new Bundle {\n",
-    "    val state = Input(UInt(2.W))\n",
-    "    val coffee = Input(Bool())\n",
-    "    val idea = Input(Bool())\n",
-    "    val pressure = Input(Bool())\n",
-    "    val nextState = Output(UInt(2.W))\n",
-    "  })\n",
-    "    \n",
-    "  val idle :: coding :: writing :: grad :: Nil = Enum(4)\n",
-    "  \n",
-    "  ???\n",
-    "}\n",
-    "\n",
-    "\n",
-    "// Test\n",
-    "test(new GradLife) { c =>\n",
-    "  // verify that the hardware matches the golden model\n",
-    "  for (state <- 0 to 3) {\n",
-    "    for (coffee <- List(true, false)) {\n",
-    "      for (idea <- List(true, false)) {\n",
-    "        for (pressure <- List(true, false)) {\n",
-    "          c.io.state.poke(state.U)\n",
-    "          c.io.coffee.poke(coffee.B)\n",
-    "          c.io.idea.poke(idea.B)\n",
-    "          c.io.pressure.poke(pressure.B)\n",
-    "          c.io.nextState.expect(gradLife(state, coffee, idea, pressure).U)\n",
-    "        }\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
-    "}\n",
-    "println(\"SUCCESS!!\") // Scala Code: if we get here, our tests passed!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-5\" />\n",
-    "<label for=\"check-5\"><strong>Solution</strong></label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
-    "  io.nextState := idle\n",
-    "  when (io.state === idle) {\n",
-    "    when      (io.coffee) { io.nextState := coding } \n",
-    "    .elsewhen (io.idea) { io.nextState := idle }\n",
-    "    .elsewhen (io.pressure) { io.nextState := writing }\n",
-    "  } .elsewhen (io.state === coding) {\n",
-    "    when      (io.coffee) { io.nextState := coding } \n",
-    "    .elsewhen (io.idea || io.pressure) { io.nextState := writing }\n",
-    "  } .elsewhen (io.state === writing) {\n",
-    "    when      (io.coffee || io.idea) { io.nextState := writing }\n",
-    "    .elsewhen (io.pressure) { io.nextState := grad }\n",
-    "  }\n",
-    "</pre></article></div></section></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "---\n",
-    "# You're done!\n",
-    "\n",
-    "[Return to the top.](#top)"
    ]
   }
  ],
