--- a/5_parameters.ipynb
+++ b/5_parameters.ipynb
@@ -4,25 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"top\"></a><img src=\"images/chisel_1024.png\" alt=\"Chisel logo\" style=\"width:480px;\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Module 3.1: Generators: Parameters\n",
-    "**Prev: [ChiselTest (was chisel-testers2)](2.6_chiseltest.ipynb)**<br>\n",
-    "**Next: [Generators: Collections](3.2_collections.ipynb)**\n",
+    "# Module 5: Generators: Parameters\n",
     "\n",
-    "## Motivation\n",
+    "Adapted for UC Berkeley ELENG 194/294 from Chisel Bootcamp by ELENG 194/294 staff\n",
+    "\n",
     "For Chisel modules to be code generators, there must be something that tells the generator how it should go about its job.\n",
     "In this section we discuss module parameterization, the various methodologies and Scala language features.\n",
     "The richness of the parameter passing implementation is directly proportional to the richness of the circuits generated.\n",
     "Parameters should provide useful default values, be easy to set, and protect against illegal or non-sensical values.\n",
-    "For more complicated system it is very useful if they can be locally overriden in a way that does not inadvertantly affect other modules usages.\n",
-    "\n",
-    "## Setup"
+    "For more complicated system it is very useful if they can be locally overriden in a way that does not inadvertantly affect other modules usages."
    ]
   },
   {
@@ -116,164 +106,7 @@
     "These are pre-elaboration assertions, which are useful when your generator only works with certain parameterizations or when some parameterizations are mutually exclusive or nonsensical.\n",
     "The above code block checks that widths are non-negative.\n",
     "\n",
-    "There is a separate construct for simulation-time assertions called `assert(...)`.\n",
-    "\n",
-    "## Sorting with Parameterized Modules\n",
-    "The following code block is a parameterized sort similar to `Sort4` from module 2.3.\n",
-    "Unlike the previous example of an adder with parameterized width IOs, this example has a fixed IO.\n",
-    "The parameter controls what hardware is generated inside the module.\n",
-    "![Sort4](images/Sorter4.png)\n",
-    "<span style=\"color:blue\">**Example: Parameterized 4-Input Sort**</span><br>\n",
-    "Unlike 2.3, this implementation is parameterized to be either a descending or an ascending sort."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "/** Sort4 sorts its 4 inputs to its 4 outputs */\n",
-    "class Sort4(ascending: Boolean) extends Module {\n",
-    "  val io = IO(new Bundle {\n",
-    "    val in0 = Input(UInt(16.W))\n",
-    "    val in1 = Input(UInt(16.W))\n",
-    "    val in2 = Input(UInt(16.W))\n",
-    "    val in3 = Input(UInt(16.W))\n",
-    "    val out0 = Output(UInt(16.W))\n",
-    "    val out1 = Output(UInt(16.W))\n",
-    "    val out2 = Output(UInt(16.W))\n",
-    "    val out3 = Output(UInt(16.W))\n",
-    "  })\n",
-    "    \n",
-    "  // this comparison funtion decides < or > based on the module's parameterization\n",
-    "  def comp(l: UInt, r: UInt): Bool = {\n",
-    "      if (ascending) {\n",
-    "        l < r\n",
-    "      } else {\n",
-    "        l > r\n",
-    "    }\n",
-    "  }\n",
-    "\n",
-    "  val row10 = Wire(UInt(16.W))\n",
-    "  val row11 = Wire(UInt(16.W))\n",
-    "  val row12 = Wire(UInt(16.W))\n",
-    "  val row13 = Wire(UInt(16.W))\n",
-    "\n",
-    "  when(comp(io.in0, io.in1)) {\n",
-    "    row10 := io.in0            // preserve first two elements\n",
-    "    row11 := io.in1\n",
-    "  }.otherwise {\n",
-    "    row10 := io.in1            // swap first two elements\n",
-    "    row11 := io.in0\n",
-    "  }\n",
-    "\n",
-    "  when(comp(io.in2, io.in3)) {\n",
-    "    row12 := io.in2            // preserve last two elements\n",
-    "    row13 := io.in3\n",
-    "  }.otherwise {\n",
-    "    row12 := io.in3            // swap last two elements\n",
-    "    row13 := io.in2\n",
-    "  }\n",
-    "\n",
-    "  val row21 = Wire(UInt(16.W))\n",
-    "  val row22 = Wire(UInt(16.W))\n",
-    "\n",
-    "  when(comp(row11, row12)) {\n",
-    "    row21 := row11            // preserve middle 2 elements\n",
-    "    row22 := row12\n",
-    "  }.otherwise {\n",
-    "    row21 := row12            // swap middle two elements\n",
-    "    row22 := row11\n",
-    "  }\n",
-    "\n",
-    "  val row20 = Wire(UInt(16.W))\n",
-    "  val row23 = Wire(UInt(16.W))\n",
-    "  when(comp(row10, row13)) {\n",
-    "    row20 := row10            // preserve the first and the forth elements\n",
-    "    row23 := row13\n",
-    "  }.otherwise {\n",
-    "    row20 := row13            // swap the first and the forth elements\n",
-    "    row23 := row10\n",
-    "  }\n",
-    "\n",
-    "  when(comp(row20, row21)) {\n",
-    "    io.out0 := row20            // preserve first two elements\n",
-    "    io.out1 := row21\n",
-    "  }.otherwise {\n",
-    "    io.out0 := row21            // swap first two elements\n",
-    "    io.out1 := row20\n",
-    "  }\n",
-    "\n",
-    "  when(comp(row22, row23)) {\n",
-    "    io.out2 := row22            // preserve first two elements\n",
-    "    io.out3 := row23\n",
-    "  }.otherwise {\n",
-    "    io.out2 := row23            // swap first two elements\n",
-    "    io.out3 := row22\n",
-    "  }\n",
-    "}\n",
-    "\n",
-    "\n",
-    "\n",
-    "// Here are the testers\n",
-    "test(new Sort4(true)) { c => \n",
-    "  c.io.in0.poke(3.U)\n",
-    "  c.io.in1.poke(6.U)\n",
-    "  c.io.in2.poke(9.U)\n",
-    "  c.io.in3.poke(12.U)\n",
-    "  c.io.out0.expect(3.U)\n",
-    "  c.io.out1.expect(6.U)\n",
-    "  c.io.out2.expect(9.U)\n",
-    "  c.io.out3.expect(12.U)\n",
-    "\n",
-    "  c.io.in0.poke(13.U)\n",
-    "  c.io.in1.poke(4.U)\n",
-    "  c.io.in2.poke(6.U)\n",
-    "  c.io.in3.poke(1.U)\n",
-    "  c.io.out0.expect(1.U)\n",
-    "  c.io.out1.expect(4.U)\n",
-    "  c.io.out2.expect(6.U)\n",
-    "  c.io.out3.expect(13.U)\n",
-    "\n",
-    "  c.io.in0.poke(13.U)\n",
-    "  c.io.in1.poke(6.U)\n",
-    "  c.io.in2.poke(4.U)\n",
-    "  c.io.in3.poke(1.U)\n",
-    "  c.io.out0.expect(1.U)\n",
-    "  c.io.out1.expect(4.U)\n",
-    "  c.io.out2.expect(6.U)\n",
-    "  c.io.out3.expect(13.U)\n",
-    "}\n",
-    "test(new Sort4(false)) { c =>\n",
-    "  c.io.in0.poke(3.U)\n",
-    "  c.io.in1.poke(6.U)\n",
-    "  c.io.in2.poke(9.U)\n",
-    "  c.io.in3.poke(12.U)\n",
-    "  c.io.out0.expect(12.U)\n",
-    "  c.io.out1.expect(9.U)\n",
-    "  c.io.out2.expect(6.U)\n",
-    "  c.io.out3.expect(3.U)\n",
-    "\n",
-    "  c.io.in0.poke(13.U)\n",
-    "  c.io.in1.poke(4.U)\n",
-    "  c.io.in2.poke(6.U)\n",
-    "  c.io.in3.poke(1.U)\n",
-    "  c.io.out0.expect(13.U)\n",
-    "  c.io.out1.expect(6.U)\n",
-    "  c.io.out2.expect(4.U)\n",
-    "  c.io.out3.expect(1.U)\n",
-    "\n",
-    "  c.io.in0.poke(1.U)\n",
-    "  c.io.in1.poke(6.U)\n",
-    "  c.io.in2.poke(4.U)\n",
-    "  c.io.in3.poke(13.U)\n",
-    "  c.io.out0.expect(13.U)\n",
-    "  c.io.out1.expect(6.U)\n",
-    "  c.io.out2.expect(4.U)\n",
-    "  c.io.out3.expect(1.U)\n",
-    "}\n",
-    "println(\"SUCCESS!!\") // Scala Code: if we get here, our tests passed!"
+    "There is a separate construct for simulation-time assertions called `assert(...)`."
    ]
   },
   {
@@ -929,16 +762,6 @@
     "}\n",
     "\n",
     "println(\"SUCCESS!!\") // Scala Code: if we get here, our tests passed!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# You're done!\n",
-    "\n",
-    "[Return to the top.](#top)"
    ]
   }
  ],
