delete notebook output

--- a/2_comb_logic.ipynb
+++ b/2_comb_logic.ipynb
@@ -19,23 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-12T20:57:46.381080Z",
-     "start_time": "2024-01-12T20:57:45.931866Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "\u001B[36mpath\u001B[39m: \u001B[32mString\u001B[39m = \u001B[32m\"/Users/williamlyh/Desktop/Berkeley/Spring2024/ELENG194/bootcamp/tapeout-chisel-bootcamp/source/load-ivy.sc\"\u001B[39m"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "val path = System.getProperty(\"user.dir\") + \"/source/load-ivy.sc\"\n",
     "interp.load.module(ammonite.ops.Path(java.nio.file.FileSystems.getDefault().getPath(path)))"
@@ -43,23 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-12T20:57:49.167135Z",
-     "start_time": "2024-01-12T20:57:48.901058Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "\u001B[32mimport \u001B[39m\u001B[36mchisel3._\n\u001B[39m\n\u001B[32mimport \u001B[39m\u001B[36mchisel3.util._\n\u001B[39m\n\u001B[32mimport \u001B[39m\u001B[36mchisel3.tester._\n\u001B[39m\n\u001B[32mimport \u001B[39m\u001B[36mchisel3.tester.RawTester.test\n\u001B[39m"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import chisel3._\n",
     "import chisel3.util._\n",
@@ -80,23 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-12T20:58:01.410926Z",
-     "start_time": "2024-01-12T20:58:01.172304Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "defined \u001B[32mclass\u001B[39m \u001B[36mMyModule\u001B[39m"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class MyModule extends Module {\n",
     "  val io = IO(new Bundle {\n",
@@ -118,35 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Elaborating design...\n",
-      "2\n",
-      "UInt<1>(OpResult in MyModule)\n",
-      "Done elaborating.\n",
-      "module MyModule(\n",
-      "  input        clock,\n",
-      "  input        reset,\n",
-      "  input  [3:0] io_in,\n",
-      "  output [3:0] io_out\n",
-      ");\n",
-      "  assign io_out = io_in; // @[cmd4.sc 12:10]\n",
-      "endmodule\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "defined \u001B[32mclass\u001B[39m \u001B[36mMyModule\u001B[39m"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "class MyModule extends Module {\n",
     "  val io = IO(new Bundle {\n",
@@ -164,11 +95,7 @@
     "println(getVerilog(new MyModule))"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-12T20:59:00.006080Z",
-     "start_time": "2024-01-12T20:58:58.765169Z"
-    }
+    "collapsed": false
    }
   },
   {
