Fix collapsed solution sections

--- a/1_intro_to_chisel.ipynb
+++ b/1_intro_to_chisel.ipynb
@@ -245,26 +245,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-1\" />\n",
-    "<label for=\"check-1\"><strong>Solution</strong> (click to toggle displaying it)</label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
+    "<details>\n",
+    "<summary>Solution</summary>\n",
+    "<pre>\n",
     "test(new PassthroughGenerator(10)) { c =>\n",
     "    c.io.in.poke(0.U)\n",
     "    c.io.out.expect(0.U)\n",
     "    c.io.in.poke(1023.U)\n",
     "    c.io.out.expect(1023.U)\n",
-    "}\n",
-    "\n",
+    "}<br/>\n",
     "test(new PassthroughGenerator(20)) { c =>\n",
     "    c.io.in.poke(0.U)\n",
     "    c.io.out.expect(0.U)\n",
     "    c.io.in.poke(1048575.U)\n",
     "    c.io.out.expect(1048575.U)\n",
     "}\n",
-    "\n",
-    "</pre></article></div></section></div>"
+    "</pre>\n",
+    "</details>"
    ]
   },
   {
