--- a/2_comb_logic.ipynb
+++ b/2_comb_logic.ipynb
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "---\n",
     "# Common Operators\n",
     "Now that you understand how `Module`s are constructed, let's make some hardware! Take a look at the empty module below."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -77,6 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "class MyModule extends Module {\n",
@@ -93,10 +96,7 @@
     "  io.out := io.in\n",
     "}\n",
     "println(getVerilog(new MyModule))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,22 +282,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-1\" />\n",
-    "<label for=\"check-1\"><strong>Solution</strong></label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
+    "<details>\n",
+    "<summary>Solution</summary>\n",
+    "<pre>\n",
     "class MAC extends Module {\n",
     "  val io = IO(new Bundle {\n",
     "    val in_a = Input(UInt(4.W))\n",
     "    val in_b = Input(UInt(4.W))\n",
     "    val in_c = Input(UInt(4.W))\n",
     "    val out  = Output(UInt(8.W))\n",
-    "  })\n",
-    "\n",
+    "  })<br/>\n",
     "  io.out := (io.in_a * io.in_b) + io.in_c\n",
     "}\n",
-    "</pre></article></div></section></div>"
+    "</pre>\n",
+    "</details>"
    ]
   }
  ],
