--- a/3_control_flow.ipynb
+++ b/3_control_flow.ipynb
@@ -323,15 +323,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-1\" />\n",
-    "<label for=\"check-1\"><strong>Solution</strong></label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
+    "<details>\n",
+    "<summary>Solution</summary>\n",
+    "<pre>\n",
     "def poly0(x: Int): Int = x*x - 2*x + 1\n",
     "def poly1(x: Int): Int = 2*x*x + 6*x + 3\n",
     "def poly2(x: Int): Int = 4*x*x - 10*x - 5\n",
-    "</pre></article></div></section></div>"
+    "</pre>\n",
+    "</details>"
    ]
   },
   {
@@ -360,11 +359,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-2\" />\n",
-    "<label for=\"check-2\"><strong>Solution</strong></label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
+    "<details>\n",
+    "<summary>Solution</summary>\n",
+    "<pre>\n",
     "def poly(select: Int, x: Int): Int = {\n",
     "  if(select == 0) {\n",
     "    poly0(x)\n",
@@ -376,7 +373,8 @@
     "    poly2(x)\n",
     "  }\n",
     "}\n",
-    "</pre></article></div></section></div>"
+    "</pre>\n",
+    "</details>"
    ]
   },
   {
@@ -425,20 +423,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-3\" />\n",
-    "<label for=\"check-3\"><strong>Solution</strong></label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
-    "  square := io.x * io.x\n",
-    "  when(io.select === 0.U) {\n",
-    "    result := (square - (2.S * io.x)) + 1.S\n",
-    "  }.elsewhen(io.select === 1.U) {\n",
-    "    result := (2.S * square) + (6.S * io.x) + 3.S\n",
-    "  }.otherwise {\n",
-    "    result := (4.S * square) - (10.S * io.x) - 5.S\n",
-    "  }\n",
-    "</pre></article></div></section></div>"
+    "<details>\n",
+    "<summary>Solution</summary>\n",
+    "<pre>\n",
+    "square := io.x * io.x\n",
+    "when(io.select === 0.U) {\n",
+    "  result := (square - (2.S * io.x)) + 1.S\n",
+    "}.elsewhen(io.select === 1.U) {\n",
+    "  result := (2.S * square) + (6.S * io.x) + 3.S\n",
+    "}.otherwise {\n",
+    "  result := (4.S * square) - (10.S * io.x) - 5.S\n",
+    "}\n",
+    "</pre>\n",
+    "</details>"
    ]
   }
  ],
