--- a/4_sequential_logic.ipynb
+++ b/4_sequential_logic.ipynb
@@ -380,25 +380,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div id=\"container\"><section id=\"accordion\"><div>\n",
-    "<input type=\"checkbox\" id=\"check-1\" />\n",
-    "<label for=\"check-1\"><strong>Solution</strong></label>\n",
-    "<article>\n",
-    "<pre style=\"background-color:#f7f7f7\">\n",
-    "  val nextState = (state << 1) | io.in\n",
-    "  state := nextState\n",
-    "  io.out := state\n",
-    "</pre></article></div></section></div>"
+    "<details>\n",
+    "<summary>Solution</summary>\n",
+    "<pre>\n",
+    "val nextState = (state << 1) | io.in\n",
+    "state := nextState\n",
+    "io.out := state\n",
+    "</pre>\n",
+    "</details>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
   }
  ],
  "metadata": {
